# porcos-launcher-evo

./: .gitignore  README.md  check_neoforge.py  check_neoforge_xml.py  components.json  index.html  package-lock.json  package.json  splashscreen.html  tsconfig.json  update_version.cjs  vite.config.ts
src/: App.css  App.tsx  index.css  splashscreen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/crash_assistant/: config.toml  modlist.json
src-tauri/icons/: icon.icns
src-tauri/local/crash_assistant/: 24248_1764689634016_args.info  gpu-detect-jni-README.MD  normal_stop_pid32224.tmp  successful_launch_pid32224.tmp  username.info
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  files.rs  instances.rs  launcher.rs  mod.rs  modloaders.rs  network.rs
src-tauri/src/launcher/: asset_manager.rs  java_detector.rs  library_manager.rs  minecraft_launcher.rs  mod.rs  version_details.rs  version_manager.rs
src/components/: CreateInstanceModal.module.css  CreateInstanceModal.tsx  InstallModal.module.css  InstanceDetails.module.css  InstanceDetails.tsx  InstanceSettings.module.css  InstanceSettings.tsx  ModDetailsModal.module.css  ModDetailsModal.tsx  ModDetailsView.module.css  ModDetailsView.tsx  ModInstallSuccessModal.module.css  ModInstallSuccessModal.tsx  ModpackInstallModal.module.css  ModpackInstallModal.tsx  SettingsLayout.module.css  SettingsLayout.tsx  Sidebar.tsx  SplashScreen.tsx  TitleBar.tsx  UpdateChecker.module.css  UpdateChecker.tsx
src/layouts/: MainLayout.tsx
(+13 files in other folders)
